--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -6,12 +6,12 @@
 <title>Hemingways - Linking People with Brands</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
+  document.addEventListener('DOMContentLoaded', (event) => {
     const circles = document.querySelectorAll('.circle');
     circles.forEach(circle => {
-      circle.addEventListener('click', function () {
-        circles.forEach(c => c.classList.remove('border-red-500'));
-        this.classList.add('border-red-500');
+      circle.addEventListener('click', function() {
+        this.classList.toggle('border-red-500');
+        this.classList.toggle('border-black');
       });
     });
   });
@@ -20,51 +20,48 @@
   .circle {
     width: 100px;
     height: 100px;
-    border: 20px solid black;
     border-radius: 50%;
+    border: 20px solid black;
     display: inline-block;
     margin: 0 10px;
     cursor: pointer;
   }
-  .circle.border-red-500 {
-    border-color: red;
-  }
-  .bold-center {
-    font-weight: bold;
-    text-align: center;
-  }
-  .footer-text {
-    text-align: center;
-    margin-top: 20px;
+  .footer-datetime {
+    font-family: 'Courier New', Courier, monospace;
   }
 </style>
 </head>
 <body class="bg-white text-black">
-<div class="container mx-auto px-4">
-  <header class="text-center py-6">
-    <div class="text-3xl font-bold mb-2">Hemingways</div>
-    <div class="uppercase tracking-wide text-sm mb-4">Linking People with Brands</div>
-    <div class="bold-center mb-4">Last One To Leave - Melmerby DC?</div>
-    <button class="bg-gray-200 hover:bg-gray-300 text-black font-bold py-2 px-4 rounded mb-4">
-      Click to show this section locked up.
-    </button>
-    <button class="bg-gray-200 hover:bg-gray-300 text-black font-bold py-2 px-4 rounded">
-      Set Alarm if your section is last to close
-    </button>
-  </header>
-  <main class="text-center my-8">
+<div class="text-center p-6">
+  <h1 class="text-4xl font-bold mb-4">Hemingways</h1>
+  <p class="text-xl mb-8">LINKING PEOPLE WITH BRANDS</p>
+  <p class="font-bold text-xl mb-4">Last One To Leave - Melmerby DC?</p>
+  <p class="mb-4">Click to show this section locked up.</p>
+  <p class="mb-4">Set Alarm if your section is last to close</p>
+  <div class="flex justify-center items-center mb-4">
     <div class="circle" id="circle1"></div>
     <div class="circle" id="circle2"></div>
     <div class="circle" id="circle3"></div>
-    <div class="flex justify-center items-center mt-4">
-      <span class="mx-2">W8 Main New</span>
-      <span class="mx-2">W4 Warehouse</span>
-      <span class="mx-2">W7 Glass</span>
-    </div>
-  </main>
-  <footer class="footer-text">
-    <div>Day | Month | Year | Time (GMT)</div>
-  </footer>
+  </div>
+  <div class="flex justify-center items-center mb-4">
+    <label for="circle1" class="mr-20">W8 Main New</label>
+    <label for="circle2" class="mr-20">W4 Warehouse</label>
+    <label for="circle3">W7 Glass</label>
+  </div>
 </div>
+<footer class="footer-datetime text-center p-4">
+  <script>
+    function updateDateTime() {
+      const now = new Date();
+      const day = String(now.getUTCDate()).padStart(2, '0');
+      const month = String(now.getUTCMonth() + 1).padStart(2, '0');
+      const year = now.getUTCFullYear();
+      const time = now.toUTCString().split(' ')[4];
+      document.getElementById('datetime').textContent = `${day} | ${month} | ${year} | ${time} (GMT)`;
+    }
+    setInterval(updateDateTime, 1000);
+  </script>
+  <div id="datetime" class="font-mono text-lg"></div>
+</footer>
 </body>
 </html>
