--- a/index.html
+++ b/index.html
@@ -5,17 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hemingways - Linking People with Brands</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', (event) => {
-    const circles = document.querySelectorAll('.circle');
-    circles.forEach(circle => {
-      circle.addEventListener('click', function() {
-        this.classList.toggle('border-red-500');
-        this.classList.toggle('border-black');
-      });
-    });
-  });
-</script>
+<script src="https://cdn.jsdelivr.net/npm/luxon@^2.0.0"></script>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <style>
   .circle {
     width: 100px;
@@ -26,42 +17,75 @@
     margin: 0 10px;
     cursor: pointer;
   }
-  .footer-datetime {
-    font-family: 'Courier New', Courier, monospace;
+  .circle.red {
+    border-color: red;
+  }
+  .bold-center {
+    font-weight: bold;
+    text-align: center;
   }
 </style>
 </head>
-<body class="bg-white text-black">
-<div class="text-center p-6">
-  <h1 class="text-4xl font-bold mb-4">Hemingways</h1>
-  <p class="text-xl mb-8">LINKING PEOPLE WITH BRANDS</p>
-  <p class="font-bold text-xl mb-4">Last One To Leave - Melmerby DC?</p>
-  <p class="mb-4">Click to show this section locked up.</p>
-  <p class="mb-4">Set Alarm if your section is last to close</p>
-  <div class="flex justify-center items-center mb-4">
-    <div class="circle" id="circle1"></div>
-    <div class="circle" id="circle2"></div>
-    <div class="circle" id="circle3"></div>
+<body class="bg-white text-black font-sans">
+
+<div class="container mx-auto px-4 py-8">
+  <div class="text-center mb-8">
+    <div class="text-3xl font-bold">Hemingways</div>
+    <div class="text-xl">LINKING PEOPLE WITH BRANDS</div>
   </div>
-  <div class="flex justify-center items-center mb-4">
-    <label for="circle1" class="mr-20">W8 Main New</label>
-    <label for="circle2" class="mr-20">W4 Warehouse</label>
-    <label for="circle3">W7 Glass</label>
+
+  <div class="bold-center mb-8">
+    Last One To Leave - Melmerby DC?
+  </div>
+
+  <div class="text-center mb-8">
+    Click to show this section locked up.<br>
+    Set Alarm if your section is last to close
+  </div>
+
+  <div class="flex justify-center items-center mb-8">
+    <div id="circle1" class="circle" data-session-key="circle1"></div>
+    <div id="circle2" class="circle" data-session-key="circle2"></div>
+    <div id="circle3" class="circle" data-session-key="circle3"></div>
+  </div>
+
+  <div class="flex justify-center space-x-4 mb-8">
+    <div>W8 Main New</div>
+    <div>W4 Warehouse</div>
+    <div>W7 Glass</div>
+  </div>
+
+  <div class="text-center">
+    <div id="datetime" class="text-lg"></div>
   </div>
 </div>
-<footer class="footer-datetime text-center p-4">
-  <script>
-    function updateDateTime() {
-      const now = new Date();
-      const day = String(now.getUTCDate()).padStart(2, '0');
-      const month = String(now.getUTCMonth() + 1).padStart(2, '0');
-      const year = now.getUTCFullYear();
-      const time = now.toUTCString().split(' ')[4];
-      document.getElementById('datetime').textContent = `${day} | ${month} | ${year} | ${time} (GMT)`;
+
+<script>
+  const circles = document.querySelectorAll('.circle');
+  circles.forEach(circle => {
+    const sessionKey = circle.dataset.sessionKey;
+    if (sessionStorage.getItem(sessionKey) === 'red') {
+      circle.classList.add('red');
     }
-    setInterval(updateDateTime, 1000);
-  </script>
-  <div id="datetime" class="font-mono text-lg"></div>
-</footer>
+
+    circle.addEventListener('click', () => {
+      circle.classList.toggle('red');
+      if (circle.classList.contains('red')) {
+        sessionStorage.setItem(sessionKey, 'red');
+      } else {
+        sessionStorage.removeItem(sessionKey);
+      }
+    });
+  });
+
+  function updateDateTime() {
+    const { DateTime } = luxon;
+    const now = DateTime.now().setZone('GMT');
+    document.getElementById('datetime').textContent = now.toFormat('dd | LLL | yyyy | HH:mm:ss (\'GMT\')');
+  }
+  setInterval(updateDateTime, 1000);
+  updateDateTime();
+</script>
+
 </body>
 </html>
